--- a/templates.html
+++ b/templates.html
@@ -393,7 +393,7 @@
         <script>
         $(document).ready(function() {
           $('.add-template').click(function() {
-            $('#modal-templates').modal('show');
+            //$('#modal-templates').modal('show');
           });
 
           $('.template').click(function() {
